--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,24 @@
 services:
+  reverse-proxy:
+    build:
+      context: ./reverse-proxy
+    ports:
+      - 80:80
+    volumes:
+      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
+  backend:
+    build: ./backend
+    ports:
+        - $BACKEND_PORT:8000
+    restart: always
+    env_file:
+        - .env
+    volumes:
+        - ./backend/api:/app/api
+
   frontend:
     build:
-      context: .
+      context: ./frontend
     image: nextjs-dev
     ports:
       - 3000:3000
@@ -16,3 +33,9 @@ services:
             - node_modules/
         - action: rebuild
           path: package.json
+  
+  adminer:
+        image: adminer
+        restart: always
+        ports:
+            - $ADMINER_PORT:8080
