--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -5,7 +5,7 @@ events{
 http{
   server {
   listen 80;
-  server_name localhost;
+  server_name ITP4606;
 
   location / {
     proxy_pass http://frontend:3000/;
