--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -7,9 +7,12 @@ http{
   listen 80;
   server_name ITP4606;
 
-  location / {
+location / {
     proxy_pass http://frontend:3000/;
-  }
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+}
 
   location /api/ {
     rewrite  ^/api/(.*)  /$1 break;
