--- a/.env
+++ b/.env
@@ -1,10 +1,6 @@
 PROJECT_NAME=測試系統
 
-BACKEND_PORT=8000
-FRONTEND_PORT=3000
-ADMINER_PORT=8070
-POSTGRES_PORT=5432
-
+LOCAL_DB=false
 #DATABASE_TYPE should be mysql or postgres choose either one
 DATABASE_TYPE=postgres
 
