--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   backend:
     build: ./backend
     ports:
-        - $BACKEND_PORT:8000
+        - 8000:8000
     restart: always
     env_file:
         - .env
@@ -45,4 +45,14 @@ services:
     image: adminer
     restart: always
     ports:
-        - $ADMINER_PORT:8080
+        - 8080:8080
+  
+  localdb:
+    image: postgres:17.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER:$POSTGRES_USER
+      - POSTGRES_PASSWORD:POSTGRES_PASSWORD
+      - POSTGRES_DB:POSTGRES_DB
+      - 5432:5432
