--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,9 +50,10 @@ services:
   localdb:
     image: postgres:17.0-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - ./postgres_data:/var/lib/postgresql
     environment:
-      - POSTGRES_USER:$POSTGRES_USER
-      - POSTGRES_PASSWORD:POSTGRES_PASSWORD
-      - POSTGRES_DB:POSTGRES_DB
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_DB=$POSTGRES_DB
+    ports:
       - 5432:5432
