--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PROJECT_NAME=測試系統
 
-LOCAL_DB=no
+LOCAL_DB=yes
 #DATABASE_TYPE should be mysql or postgres choose either one
 DATABASE_TYPE=postgres
 
