--- a/docker-compose-debug.yml
+++ b/docker-compose-debug.yml
@@ -2,12 +2,14 @@ services:
   backend:
     build: ./backend
     command:
-      ["python", "-m", "debugpy", "--wait-for-client", "--listen", "0.0.0.0:5678", "-m", "uvicorn", "api.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
+      ["python", "-m", "debugpy", "--listen", "0.0.0.0:5678", "-m", "uvicorn", "api.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
     ports:
-        - 8000:8000
+        - 9000:8000
         - 5678:5678
     env_file:
         - .env
+    environment:
+      APP_ENV: development
     volumes:
         - ./backend/api:/app/api
   
@@ -15,10 +17,10 @@ services:
     build:
       context: ./reverse-proxy
     ports:
-      - 80:80
+      - 8081:80
     volumes:
-      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
-  frontend:
+      - ./reverse-proxy/nginx-uat.conf:/etc/nginx/nginx.conf
+  uat-frontend:
     build:
       context: ./frontend
     image: nextjs-dev
