--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,17 @@ services:
       - 80:80
     volumes:
       - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
-    restart: always
+    restart: unless-stopped
 
   backend:
     build: ./backend
     ports:
         - 8000:8000
-    restart: always
     env_file:
         - .env
     volumes:
         - ./backend/api:/app/api
+    restart: unless-stopped
 
   frontend:
     build:
@@ -39,11 +39,11 @@ services:
             - node_modules/
         - action: rebuild
           path: package.json
-    restart: always
+    restart: unless-stopped
 
   adminer:
     image: adminer
-    restart: always
+    restart: unless-stopped
     ports:
         - 8080:8080
   
@@ -57,3 +57,4 @@ services:
       - POSTGRES_DB=$POSTGRES_DB
     ports:
       - 5432:5432
+    restart: unless-stopped
