--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ LOCAL_DB=yes
 #DATABASE_TYPE should be mysql or postgres choose either one
 DATABASE_TYPE=postgres
 
-POSTGRES_HOST=uatdb.cvlfbqjwldth.us-east-1.rds.amazonaws.com
+POSTGRES_HOST=postgredb.cmxnkws8hcin.us-east-1.rds.amazonaws.com
 POSTGRES_PASSWORD=rootpassword
 POSTGRES_USER=postgres
 POSTGRES_DB=ITP4606
