--- a/.env
+++ b/.env
@@ -9,7 +9,13 @@ DATABASE_TYPE=postgres
 # POSTGRES_USER=postgres
 # POSTGRES_DB=ITP4606
 
-MYSQL_HOST=database-2.c656mc6zlpcv.us-east-1.rds.amazonaws.com
+MYSQL_HOST=database.cmxnkws8hcin.us-east-1.rds.amazonaws.com
 MYSQL_PASSWORD=Gg95174111
 MYSQL_USER=admin
-MYSQL_DB=project
+MYSQL_DB=ITP4606
+
+MONGO_HOST = 'database.cmxnkws8hcin.us-east-1.rds.amazonaws.com'
+MONGOBD_USER = 'admin'
+MONGO_PASSWORD = 'Gg95174111'
+MONGO_BD = 'ITP4606'
+
